[gd_scene load_steps=23 format=3 uid="uid://dfyubvpr8rlrt"]

[ext_resource type="PackedScene" uid="uid://uffiacfa5a7c" path="res://scenes/npcs/emeny.tscn" id="1_vw76u"]
[ext_resource type="Texture2D" uid="uid://tuydsothg2ba" path="res://assets/enemies.png" id="2_mgl1v"]
[ext_resource type="Script" uid="uid://ctro8h8av2661" path="res://scripts/mushroom_emeny.gd" id="2_vrf8f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mgl1v"]
size = Vector2(13, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrf8f"]
atlas = ExtResource("2_mgl1v")
region = Rect2(128, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_on2w5"]
atlas = ExtResource("2_mgl1v")
region = Rect2(144, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_acxyl"]
atlas = ExtResource("2_mgl1v")
region = Rect2(128, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71ap"]
atlas = ExtResource("2_mgl1v")
region = Rect2(48, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6b7ef"]
atlas = ExtResource("2_mgl1v")
region = Rect2(64, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bmff"]
atlas = ExtResource("2_mgl1v")
region = Rect2(80, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsevn"]
atlas = ExtResource("2_mgl1v")
region = Rect2(96, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiigh"]
atlas = ExtResource("2_mgl1v")
region = Rect2(128, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6q45"]
atlas = ExtResource("2_mgl1v")
region = Rect2(208, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpvv5"]
atlas = ExtResource("2_mgl1v")
region = Rect2(0, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0ltk"]
atlas = ExtResource("2_mgl1v")
region = Rect2(96, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8uv5l"]
atlas = ExtResource("2_mgl1v")
region = Rect2(80, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ip6vm"]
atlas = ExtResource("2_mgl1v")
region = Rect2(64, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2va0x"]
atlas = ExtResource("2_mgl1v")
region = Rect2(48, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpawd"]
atlas = ExtResource("2_mgl1v")
region = Rect2(0, 112, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_mgl1v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrf8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_on2w5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acxyl")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71ap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6b7ef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bmff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsevn")
}],
"loop": false,
"name": &"emerge",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiigh")
}],
"loop": true,
"name": &"emerged",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6q45")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpvv5")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0ltk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8uv5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ip6vm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2va0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpawd")
}],
"loop": false,
"name": &"submerge",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vrf8f"]
size = Vector2(9, 11)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vrf8f"]
radius = 6.0
height = 152.0

[node name="MushroomEmeny" instance=ExtResource("1_vw76u")]
script = ExtResource("2_vrf8f")
can_attack = true
can_shoot = true

[node name="BodyCollisionShape2D" parent="." index="0"]
position = Vector2(-0.5, 6)
shape = SubResource("RectangleShape2D_mgl1v")

[node name="AnimatedSprite" parent="." index="1"]
sprite_frames = SubResource("SpriteFrames_mgl1v")
animation = &"emerged"

[node name="RayCastLeft" parent="." index="3"]
target_position = Vector2(-9, 0)

[node name="CollisionShape2D" parent="NPCHitbox" index="0"]
position = Vector2(-0.5, 2.5)
shape = SubResource("RectangleShape2D_vrf8f")

[node name="PlayerDetectionArea" type="Area2D" parent="." index="6"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea" index="0"]
position = Vector2(-83, 2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_vrf8f")

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_animated_sprite_animation_finished"]
[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_entered"]
[connection signal="body_exited" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_exited"]

[editable path="NPCHitbox"]
